fix: adjust swagger
