# internal/routers/api/v1/artwork.go
@@ -2,48 +2,48 @@ package v1
 
 import "github.com/gin-gonic/gin"
 
-type Article struct{}
+type Artwork struct{}
 
-func NewArticle() Article {
-	return Article{}
+func NewArtwork() Artwork {
+	return Artwork{}
 }
 
-// @Summary	[AC-001] 取得文章資訊
-// @Tags		Aritcle
+// @Summary	[AC-001] 取得作品資訊
+// @Tags		Artwork
 // @Success	200	{object}	app.EmptySuccessResponse{}	"成功"
 // @Failure	400	{object}	errcode.Error				"請求失敗"
 // @Failure	500	{object}	errcode.Error				"伺服器異常"
-// @Router		/articles/{id} [get]
-func (t Article) Get(c *gin.Context) {}
+// @Router		/artworks/{id} [get]
+func (t Artwork) Get(c *gin.Context) {}
 
-// @Summary	[AC-002] 取得文章列表
-// @Tags		Aritcle
+// @Summary	[AC-002] 取得作品列表
+// @Tags		Artwork
 // @Success	200	{object}	app.EmptySuccessResponse{}	"成功"
 // @Failure	400	{object}	errcode.Error				"請求失敗"
 // @Failure	500	{object}	errcode.Error				"伺服器異常"
-// @Router		/articles [delete]
-func (t Article) List(c *gin.Context) {}
+// @Router		/artworks [delete]
+func (t Artwork) List(c *gin.Context) {}
 
-// @Summary	[AC-003] 新增文章
-// @Tags		Aritcle
+// @Summary	[AC-003] 新增作品
+// @Tags		Artwork
 // @Success	200	{object}	app.EmptySuccessResponse{}	"成功"
 // @Failure	400	{object}	errcode.Error				"請求失敗"
 // @Failure	500	{object}	errcode.Error				"伺服器異常"
-// @Router		/articles [post]
-func (t Article) Create(c *gin.Context) {}
+// @Router		/artworks [post]
+func (t Artwork) Create(c *gin.Context) {}
 
-// @Summary	[AC-004] 更新文章
-// @Tags		Aritcle
+// @Summary	[AC-004] 更新作品
+// @Tags		Artwork
 // @Success	200	{object}	app.EmptySuccessResponse{}	"成功"
 // @Failure	400	{object}	errcode.Error				"請求失敗"
 // @Failure	500	{object}	errcode.Error				"伺服器異常"
-// @Router		/articles/{id} [put]
-func (t Article) Update(c *gin.Context) {}
+// @Router		/artworks/{id} [put]
+func (t Artwork) Update(c *gin.Context) {}
 
-// @Summary	[AC-005] 刪除文章
-// @Tags		Aritcle
+// @Summary	[AC-005] 刪除作品
+// @Tags		Artwork
 // @Success	200	{object}	app.EmptySuccessResponse{}	"成功"
 // @Failure	400	{object}	errcode.Error				"請求失敗"
 // @Failure	500	{object}	errcode.Error				"伺服器異常"
-// @Router		/articles/{id} [delete]
-func (t Article) Delete(c *gin.Context) {}
+// @Router		/artworks/{id} [delete]
+func (t Artwork) Delete(c *gin.Context) {}
